--- a/src/App.css
+++ b/src/App.css
@@ -34,21 +34,36 @@ body {
   padding: 0;
 }
 
+body {
+  background-color: #006064;
+}
 .flex-one {
   flex-grow: 1;
 }
+
+h1 {
+  color: #fff;
+  font-size: 44px;
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+}
+/* ---  GameBox  --- */
 .gameBox {
-  border: 1px solid black;
-  padding: 3px;
+  border-radius: 4px;
+  background-color: #fafafa;
+  padding: 8px;
   display: flex;
   flex-direction: column;
+  margin: 7px;
 }
 .gameBox--title {
-  /* flex-grow: 1; */
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
 }
 .gameBox--row2 {
   width: 100%;
   display: flex;
+  margin-top: 5px;
   flex-direction: row;
 }
 .gamebox--platform {
@@ -57,4 +72,13 @@ body {
 .gamebox--year {
   /* flex-grow: 1; */
   display: block;
+}
+
+/* --- Search --- */
+
+.platform-tag {
+  display: inline-block;
+  background-color: pink;
+  margin: 4px;
+  padding: 4px;
 }
