--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@
   background-color: rgba(0, 0, 255, 0.2);
 } */
 
+/* ---  Initialisations / Globals  --- */
+
 html,
 body {
   width: 100%;
@@ -34,23 +36,30 @@ body {
   padding: 0;
 }
 
-body {
-  background-color: #006064;
-}
 .flex-one {
   flex-grow: 1;
 }
 
+/* ---  ^_^  --- */
+
+body {
+  background-color: #f5f5f5;
+}
+
 h1 {
-  color: #fff;
+  /* color: #fff; */
   font-size: 44px;
   font-family: 'Oswald', sans-serif;
   text-align: center;
 }
+:root {
+  --primary-colour: #e65100;
+}
 /* ---  GameBox  --- */
 .gameBox {
   border-radius: 4px;
-  background-color: #fafafa;
+  background-color: #fff;
+  border-bottom: 1px solid var(--primary-colour);
   padding: 8px;
   display: flex;
   flex-direction: column;
@@ -58,12 +67,15 @@ h1 {
 }
 .gameBox--title {
   font-family: 'Raleway', sans-serif;
+  font-size: 23px;
   font-weight: 400;
 }
 .gameBox--row2 {
   width: 100%;
   display: flex;
   margin-top: 5px;
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
   flex-direction: row;
 }
 .gamebox--platform {
@@ -74,11 +86,37 @@ h1 {
   display: block;
 }
 
+.gamebox--stars {
+  display: inline;
+}
+.gamebox--star {
+  --star-size: 19px;
+  width: var(--star-size);
+  height: var(--star-size);
+  color: #616161;
+}
+
+.gamebox--star-coloured {
+  color: var(--primary-colour);
+}
 /* --- Search --- */
 
+#search-label {
+}
+
+.platform-tags {
+  text-align: center;
+}
 .platform-tag {
   display: inline-block;
-  background-color: pink;
+  font-family: 'Lato', sans-serif;
+  background-color: #bdbdbd;
   margin: 4px;
-  padding: 4px;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 6px;
+}
+
+.chosen-platform-tag {
+  background-color: #ff9100;
 }
