--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,11 @@ body {
   padding: 0;
 }
 
+body {
+  background-color: #f5f5f5;
+  font-family: 'Lato', sans-serif;
+}
+
 .flex-one {
   flex-grow: 1;
 }
@@ -44,11 +49,10 @@ body {
   --primary-colour: #e65100;
 }
 
-/* ---  header  --- */
-
-body {
-  background-color: #f5f5f5;
+button {
+  padding: 4px;
 }
+/* ---  header  --- */
 
 .header {
   display: flex;
@@ -69,7 +73,27 @@ h1 {
   padding: 15px;
 }
 
+.icon-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 15px; /*TODO move font size to another place*/
+}
+
+.icon-buton--label {
+  text-align: center;
+}
+/* ---  ^_^  --- */
+
+.message {
+  text-align: center;
+}
+
 /* ---  GameBox  --- */
+#games-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(480px, 1fr));
+}
 .gameBox {
   border-radius: 4px;
   background-color: #fff;
@@ -81,6 +105,7 @@ h1 {
 }
 .gameBox--title {
   font-family: 'Raleway', sans-serif;
+  flex-grow: 1; /*This is to make the stars and platform appear in same line when titles in the same row occupt unequal number of lines */
   font-size: 23px;
   font-weight: 500;
 }
@@ -150,4 +175,7 @@ h3 {
 
 #search-field {
   flex-grow: 1;
+  font-family: 'Lato', sans-serif;
+  padding: 4px;
+  font-size: 17px;
 }
